Changed menu button to link to try to fix styling issues on mobile.

--- a/jean_site/static/styles.css
+++ b/jean_site/static/styles.css
@@ -126,10 +126,6 @@ a.button:active {
     box-shadow: none;
 }
 
-button {
-    appearance: none;
-}
-
 /***********************GRIDS*******************************/
 
 #page-container {
